<resources>
    <string name="app_name">FarmBoard</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="enter_mobile">Mobile</string>
    <string name="enter_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
    <string name="add_image">Image:</string>
    <string name="add_location">Location:</string>
    <string name="add_current_location">Add Current Location</string>
    <string name="nearby_location">Street Address:</string>
    <string name="sign_out">Sign Out</string>
</resources>