<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register Here"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_below="@+id/text_register"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/password"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/redirect_to_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:layout_below="@+id/sign_up"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>