<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Login Credentials"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/text_login"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_password"
        android:layout_below="@+id/email"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/redirect_to_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_below="@+id/login"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"/>

</RelativeLayout >